# futo_with_parakeet

./: .gitignore  README.md  settings.gradle
.github/workflows/: release-apk.yml
app/: build.gradle
app/src/main/java/org/futo/voiceinput/: AudioRecognizer.kt  Util.kt
app/src/main/java/org/futo/voiceinput/downloader/: DownloadActivity.kt
app/src/main/java/org/futo/voiceinput/parakeet/: ParakeetBackend.kt  ParakeetModel.kt  ParakeetNative.kt  SpeechBackend.kt
app/src/main/java/org/futo/voiceinput/settings/pages/: Models.kt
app/src/main/res/values/: strings.xml
parakeet-native/: Cargo.toml
parakeet-native/src/: assets.rs  engine.rs  lib.rs
parakeet-native/transcribe-rs/: Cargo.toml
parakeet-native/transcribe-rs/src/engines/: mod.rs
