[package]
name = "parakeet_voiceinput"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
android_logger = "0.13"
jni = "0.21"
log = "0.4"
once_cell = "1.19"
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic"] }
transcribe-rs = { path = "transcribe-rs" }
